samples/_failures_safe/1761522337_ee9981_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f4fdf6b1.c: In function ‘dfs’:
./samples/SAFE/__tmp_f4fdf6b1.c:192:5: error: expected declaration or statement at end of input
  192 |     printf("DFS traversal: ");
      |     ^~~~~~
